--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,29 @@
 .App {
+  margin-top: 0;
+  margin-bottom: 0;
+  padding-bottom: 50px;
   text-align: center;
+  font-family: 'DM Sans', sans-serif;
+  max-width: 700px;
+  margin: auto;
+  flex:1;
+  color: aliceblue;
+  background-color:transparent;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.button{
+  text-decoration: none;
+  font-family: 'DM Sans', sans-serif;
+  border: none;
+  background-color: '#ffffff66';
+  font-size: 22px;
+  font-weight: 500;
+  padding: 10px;
+  padding-left: 25px;
+  padding-right: 25px;
+  margin: 20px;
+  color: '#aaa';
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.button:hover  {
+box-shadow: 0 10px 10px #00000055;
+transition-duration: 400ms;
 }
