--- a/src/PageTemplate/StoryPage.css
+++ b/src/PageTemplate/StoryPage.css
@@ -14,3 +14,10 @@
     background-attachment: fixed;
     background-position: center;
 }
+.image{
+    position: absolute;
+    z-index: -1;
+    top: 0;
+    height: 100%;
+    left: 0;
+}
