--- a/src/PageTemplate/StoryPage.css
+++ b/src/PageTemplate/StoryPage.css
@@ -20,7 +20,19 @@
     top: 0;
     height: 100%;
     left: 0;
+    animation: zoominoutsinglefeatured 150s forwards;
   }
+  @keyframes zoominoutsinglefeatured {
+    0% {
+        transform: scale(1,1);
+    }
+    50% {
+        transform: scale(1.2,1.2);
+    }
+    100% {
+        transform: scale(1,1);
+    }
+}
   .fade-appear {
     opacity: 0;
     z-index: 1;
