--- a/src/PageTemplate/StoryPage.css
+++ b/src/PageTemplate/StoryPage.css
@@ -6,14 +6,17 @@
 
   }
   .StoryPage {
-    flex: 1;
+    position: absolute;
+    display: flex;
     flex-direction: column;
-    justify-content: space-evenly;
-    height: 100vh;
-    padding-top: 10vh;
-
+    height: 100%;
+    width: 100%;
+    box-shadow: 0 0 200px rgba(0,0,0,0.9) inset;
   }
-
+.options{
+  margin-top: auto;
+  padding-bottom: 6em;
+}
   .image {
     position: fixed;
     z-index: -1;
@@ -129,3 +132,25 @@
   }
 }
 /* blink animation */
+
+/* neon button */
+@import url("https://fonts.googleapis.com/css?family=Quicksand&display=swap");
+.neon-button{
+  font-size: 2rem;
+  color: lightblue;
+  text-shadow: 5px 5px 30px blue;
+  font-family: 'Quicksand';
+  font-weight: lighter;
+}
+@keyframes repeat {
+
+  0% {color: lightblue; text-shadow: 5px 5px 30px lightblue;}
+  20% {color: #45aaf2; text-shadow: 5px 5px 30px  #45aaf2;}
+  40% {color: #2d98da; text-shadow: 5px 5px 30px  #2d98da;}
+  60% {color: #4b7bec; text-shadow: 5px 5px 30px  #2d98da;}
+  80% {color: #000000; text-shadow: 5px 5px 30px  #000000;}
+  100% {color: lightblue; text-shadow: 5px 5px 30px  lightblue;}
+
+}
+
+/* neon button */
