--- a/src/PageTemplate/StoryPage.css
+++ b/src/PageTemplate/StoryPage.css
@@ -4,7 +4,7 @@
     font-weight: 500;
     margin-bottom: auto;
     padding-top: 1em;
-
+    text-align: center;
   }
   .StoryPage {
     position: absolute;
