--- a/src/App.css
+++ b/src/App.css
@@ -15,6 +15,8 @@
   position: absolute;
   width: -webkit-fill-available;
   justify-content: space-between;
+  color: antiquewhite;
+  z-index: 1;
 }
 .button{
   border: none;
