--- a/src/config/components/SplashScreen/SplashScreen.css
+++ b/src/config/components/SplashScreen/SplashScreen.css
@@ -2,7 +2,7 @@
     width: 100%;
     height: 100%;
     position: fixed;
-    background-color: #34495e;
+    background-color: black
   }
   
   .content {
@@ -11,17 +11,15 @@
     left: 50%;
     -webkit-transform: translate(-50%, -50%);
             transform: translate(-50%, -50%);
-    height: 160px;
     overflow: hidden;
-    font-size: 35px;
-    line-height: 40px;
+    width: 53vh;
+    font-size: 28px;
     color: #ecf0f1;
   }
   .content__container {
     font-weight: 600;
     overflow: hidden;
     height: 40px;
-    padding: 0 40px;
   }
   .content__container:before {
     content: '[';
@@ -35,7 +33,7 @@
   .content__container:after, .content__container:before {
     position: absolute;
     top: 0;
-    color: #16a085;
+    color: darkgrey;
     font-size: 42px;
     line-height: 40px;
     -webkit-animation-name: opacity;
@@ -47,15 +45,12 @@
   }
   .content__container__text {
     display: inline;
-    float: left;
     margin: 0;
   }
   .content__container__list {
     margin-top: 0;
-    padding-left: 110px;
-    padding-bottom: 6px;
+    padding-inline-start: 0px;
     line-height: 50px;
-    text-align: left;
     list-style: none;
     -webkit-animation-name: change;
     -webkit-animation-duration: 10s;
