--- a/src/App.css
+++ b/src/App.css
@@ -15,7 +15,7 @@
   position: absolute;
   width: -webkit-fill-available;
   justify-content: space-between;
-  color: rgb(255, 255, 255);
+  color: #777777;
   z-index: 1;
   padding: 10px;
 }
