--- a/src/PageTemplate/LandingPage.css
+++ b/src/PageTemplate/LandingPage.css
@@ -7,13 +7,14 @@
     position: absolute;
 }
 .game-section{
-    
+    width: 100%;
+}
+.game-carousels{
+    margin-top: 14em;
+    display: flex;
+    flex-direction: column;
     background: ghostwhite;
     border-radius: 20px 20px 0px 0px;
-    position: absolute;
-    z-index: 3;
-    margin-top: 14em;
-    width: 100%;
 }
 .head-section{ 
     display: flex;
